<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:background="#B71B33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--        <TextView-->
        <!--            android:id="@+id/textView2"-->
        <!--            android:layout_width="253dp"-->
        <!--            android:layout_height="38dp"-->
        <!--           -->
        <!--            android:text="@string/zarbgi_String"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textSize="25sp"-->
        <!--            android:textStyle="italic"-->
        <!--            android:paddingRight="6dp"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/btn_save"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->


        <Button
            android:id="@+id/btn_save"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_btn"
            android:text="@string/create_password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description_titel"
        android:textColor="#626262"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="creditCardExpirationDay"
        android:ems="15"
        android:hint="@string/password_hint_password"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Password_length"
        android:textColor="#626262"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="15"
        android:hint="@string/password_description"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_description" />

    <FrameLayout
        android:id="@+id/adContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="MissingConstraints"></FrameLayout>


<!--    <ir.tapsell.sdk.bannerads.TapsellBannerView-->
<!--        android:id="@+id/banners"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:tapsell_zone_id="63c92c0cdf906e0b23c6fee1"-->
<!--        app:tapsell_banner_type="banner_320x100" />-->
</androidx.constraintlayout.widget.ConstraintLayout>

